src/objects/c2g__codaAgedAnalysisDef__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpagedanalysisdef</customHelpPage>
    <description>Defines the presentation of  a specific type of aged analysis report.</description>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED: Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Aged Analysis Definitions</relationshipLabel>
        <relationshipName>AgedAnalysisDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AgedAnalysisCurrency__c</fullName>
        <label>Aged Analysis Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__AgedAnalysisType__c</fullName>
        <label>Aged Analysis Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debtors</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Creditors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__AllCurrencies__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Column10From__c</fullName>
        <label>Column 10 - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Column10Name__c</fullName>
        <label>Column 10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Column10To__c</fullName>
        <label>Column 10 - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Column1From__c</fullName>
        <label>Column 1 - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Column1Name__c</fullName>
        <label>Column 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Column1To__c</fullName>
        <label>Column 1 - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Column2From__c</fullName>
        <label>Column 2 - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Column2Name__c</fullName>
        <label>Column 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Column2To__c</fullName>
        <label>Column 2 - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>AgedAnalysisDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TotalOutstanding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnmatchedCash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmatched Cash</label>
        <type>Checkbox</type>
    </fields>
    <label>Aged Analysis Definition</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__AgedAnalysisType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Aged Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aged Analysis Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>